--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 body {
-    /* set line height for 1.5 times the font size
-    and use the OS's UI font as the website font
-    */
-    
     font: 100%/1.5 system-ui;
     max-width: 100ch;
     margin-inline: max(1em, (100% - 100ch) / 2);
-    padding: 25px;
+    padding: 1em;
 }
