--- a/style.css
+++ b/style.css
@@ -7,4 +7,18 @@ body {
 
 nav {
     display: flex;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: oklch(80% 3% 200);
+    padding-bottom: 0.4em;
 }
+
+nav a {
+    flex: 1;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
+    padding: 0.5em;
+    margin-bottom: auto;
+}
+
