--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ nav {
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: oklch(78% 0.017 297);
-    
 }
 
 html {
@@ -28,9 +27,10 @@ nav a {
 }
 
 nav a.current {
+    border-bottom: 4px;
     border-bottom-width: 0.4em;
     padding-bottom: 0.5em;
-    color: oklch(78% 0.017 297);
+    color: oklch(65% 0.15 300);
 }
 
 nav a:hover {
