--- a/style.css
+++ b/style.css
@@ -43,8 +43,28 @@ input, textarea, button {
 }
 
 form {
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    margin-block: 2rem;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-column: 1 / -1;
+    gap: 1em;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(15em, 4fr));
+}
+
+.projects article {
+    grid-template-rows: subgrid;
+    grid-row: span 3;
+    gap: 1em;
+}
+
+.projects h2 {
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.1;
+    text-wrap: balance;
 }
