--- a/style.css
+++ b/style.css
@@ -27,13 +27,14 @@ nav a {
 }
 
 nav a.current {
-    border-bottom: 4px;
+    border-bottom: 4px solid var(--color-accent);
     border-bottom-width: 0.4em;
     padding-bottom: 0.2em;
     color: oklch(65% 0.15 300);
 }
 
 nav a:hover {
+    border-bottom: 4px solid var(--color-accent);
     border-bottom-color: var(--color-accent);
     background-color: oklch(from var(--color-accent) 95% 5% h);
 }
@@ -45,8 +46,13 @@ input, textarea, button {
 form {
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-column: 1 / -1;
     gap: 1em;
+}
+
+form label {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / -1;
 }
 
 .projects {
