--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ nav a.current {
     border-bottom: 4px solid var(--color-accent);
     border-bottom-width: 0.4em;
     padding-bottom: 0.2em;
-    color: oklch(65% 0.15 300);
+    background-color: oklch(65% 0.15 300);
 }
 
 nav a:hover {
+    border-bottom: 4px solid var(--color-accent);
     border-bottom-color: var(--color-accent);
     background-color: oklch(from var(--color-accent) 95% 5% h);
 }
