--- a/style.css
+++ b/style.css
@@ -24,17 +24,17 @@ nav a {
     color: inherit;
     text-align: center;
     padding: 0.5em;
+    border-bottom: 4px solid transparent;
 }
 
 nav a.current {
-    border-bottom: 4px solid var(--color-accent);
+    border-bottom-color: var(--color-accent);
     border-bottom-width: 0.4em;
     padding-bottom: 0.2em;
-    background-color: oklch(65% 0.15 300);
+    color: oklch(65% 0.15 300);
 }
 
 nav a:hover {
-    border-bottom: 4px solid var(--color-accent);
     border-bottom-color: var(--color-accent);
     background-color: oklch(from var(--color-accent) 95% 5% h);
 }
