--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ form label {
 .projects {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+    gap: 2em;
 }
 
 .projects article {
