--- a/style.css
+++ b/style.css
@@ -76,10 +76,6 @@ h1, h2, h3, h4, h5, h6 {
     text-wrap: balance;
 }
 
-section {
-    padding: 2rem;
-}
-
 .resume p {
     margin: 0;
     padding: 0;
@@ -94,3 +90,20 @@ section {
     padding-left: 24px;
     padding-right: 24px;
 }
+
+.resume h2 {
+    margin: 10px 0px;
+    border-bottom: 1px solid #000000;
+    text-transform: uppercase;
+    font-size: 16px;
+    padding: 0;
+}
+
+.resume h3 {
+    margin: 6px 0px;
+    display: flex;
+    font-size: 15px;
+    padding: 0;
+    justify-content: space-between;
+}
+
