--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ section h2 {
     margin: 10px 0px;
     border-bottom: 1px solid #000000;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 18px;
     padding: 0;
 }
 
@@ -95,6 +95,11 @@ section h3 {
 section p {
     margin: 0;
     padding: 0;
+}
+
+section h3 + p {
+    margin-top: 0.2em;
+    margin-bottom: 0.5em;
 }
 
 section a {
