--- a/style.css
+++ b/style.css
@@ -85,11 +85,10 @@ section h2 {
 }
 
 section h3 {
-    margin: 6px 0px;
     display: flex;
-    font-size: 15px;
-    padding: 0;
     justify-content: space-between;
+    align-items: center;
+    margin: 6px 0;
 }
 
 section p {
