--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ form label {
 
 .projects h2 {
     margin: 0;
+    color: #4169e1;
+    border-bottom: 2px solid var(--color-accent);
+    padding-bottom: 0.25em;
 }
 
 h1, h2, h3, h4, h5, h6 {
