--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ nav a {
 }
 
 nav a.current {
+    background-color: oklch(65% 0.15 300);
+    border-bottom: 4px solid var(--color-accent);
     border-bottom-color: var(--color-accent);
     border-bottom-width: 0.4em;
     padding-bottom: 0.2em;
-    background-color: oklch(65% 0.15 300);
 }
 
 nav a:hover {
