--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav a {
 }
 
 nav a.current {
-    background-color: oklch(65% 0.15 300);
+    background-color: oklch(from var(--color-accent) 95% 5% h);
     padding-bottom: 0.2em;
     border-bottom: 4px solid var(--color-accent);
 }
