--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@ body {
 nav {
     display: flex;
     margin-bottom: 2rem;
+    --border-color: oklch(50% 10% 200 / 40%);
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    border-bottom-color: oklch(78% 0.017 297);
+    border-bottom-color: var(--border-color);
 }
 
 html {
@@ -36,7 +37,7 @@ nav a.current {
 
 nav a:hover {
     border-bottom-color: var(--color-accent);
-    background-color: oklch(from var(--color-accent) 95% 5% h);
+    background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
 input, textarea, button {
