--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav a {
 }
 
 nav a.current {
-    background-color: oklch(from var(--color-accent) 95% 5% h);
+    background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
     padding-bottom: 0.2em;
     border-bottom: 4px solid var(--color-accent);
 }
