--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav a:hover {
     background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
-input, textarea, button {
+input, textarea, button, select {
     font: inherit;
 }
 
@@ -108,4 +108,11 @@ section ul {
     margin: 4px 0;
     padding-left: 24px;
     padding-right: 24px;
+}
+
+.color-scheme {
+    position: absolute;
+    font-size: 80%;
+    top: 1rem;
+    right: 1rem;
 }
