--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 section h2 {
     margin: 10px 0px;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid inherit;
     text-transform: uppercase;
     font-size: 16px;
     padding: 0;
@@ -95,8 +95,8 @@ section h3 {
 }
 
 section h3 a {
-    color: black;
-  text-decoration: none;
+    color: canvas;
+    text-decoration: none;
 }
 
 section h3 a:hover {
