--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 section h2 {
     margin: 10px 0px;
-    border-bottom: 1px solid inherit;
+    border-bottom: 1px solid #a694c7;
     text-transform: uppercase;
     font-size: 16px;
     padding: 0;
@@ -95,7 +95,7 @@ section h3 {
 }
 
 section h3 a {
-    color: canvas;
+    color: inherit;
     text-decoration: none;
 }
 
