--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ form label {
     grid-column: 1 / -1;
 }
 
+form button {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / -1;
+}
+
 .projects {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
