--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ form button {
     display: grid;
     grid-template-columns: subgrid;
     grid-column: 1 / -1;
+    align-items: center;
 }
 
 .projects {
