--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@ form label {
     grid-column: 1 / -1;
 }
 
-form button {
+/* form button {
     display: grid;
     grid-template-columns: subgrid;
     grid-column: 1 / -1;
     align-items: center;
-}
+} */
 
 .projects {
     display: grid;
