--- a/style.css
+++ b/style.css
@@ -128,3 +128,16 @@ section ul {
     top: 1rem;
     right: 1rem;
 }
+
+#profile-stats dl {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+#profile-stats dt {
+    grid-row: 1;
+}
+
+#profile-stats dd {
+    grid-row: 2;
+}
