--- a/style.css
+++ b/style.css
@@ -69,20 +69,25 @@ form label {
     gap: 2em;
 }
 
-.projects article {
+/* .projects article {
     grid-template-rows: subgrid;
     grid-row: span 3;
     gap: 1em;
-}
-
-.projects h2 {
-    border-bottom: 2px solid var(--color-accent);
-    padding-bottom: 0.25em;
-}
+} */
 
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.1;
     text-wrap: balance;
+}
+
+h2 {
+    border-bottom: 2px solid var(--color-accent);
+    padding-bottom: 0.25em;
+}
+
+h3 {
+    border-bottom: 2px solid color-mix(in oklch, var(--color-accent), canvas 75%);
+    padding-bottom: 0.25em;
 }
 
 section h2 {
