--- a/style.css
+++ b/style.css
@@ -56,12 +56,11 @@ form label {
     grid-column: 1 / -1;
 }
 
-/* form button {
-    display: grid;
-    grid-template-columns: subgrid;
+form button {
     grid-column: 1 / -1;
-    align-items: center;
-} */
+    text-align: center;
+    padding: 0.2em;
+}
 
 .projects {
     display: grid;
