--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ section h3 {
     font-size: 15px;
     padding: 0;
     justify-content: space-between;
+    border-bottom: none;
 }
 
 section h3 a {
