reactive search bar

--- a/style.css
+++ b/style.css
@@ -185,3 +185,22 @@ section ul {
   border-radius: 50%;
   display: inline-block;
 }
+
+&:has(path:hover) {
+  path:not(:hover) {
+    opacity: 0.5;
+  }
+}
+
+path {
+  transition: 300ms;
+  cursor: pointer;
+}
+
+.selected {
+  --color: oklch(52.919% 0.09288 312.594) !important;
+
+  &:is(path) {
+    fill: var(--color);
+  }
+}
