--- a/style.css
+++ b/style.css
@@ -239,6 +239,10 @@ circle {
   transition: 200ms;
   transform-origin: center;
   transform-box: fill-box;
+  
+  @starting-style {
+    r: 0;
+  }
 }
 
 circle:hover {
@@ -310,12 +314,54 @@ circle.selected {
 /* meta commits slider */
 
 .time-filter {
-  flex: 1;
-  align-items: baseline;
-  gap: 2rem;
-  margin-bottom: 1rem;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
 }
 
-.time-filter time {
-    margin-left: auto;
+.time-filter input[type="range"] {
+  width: 679px;
+}
+
+.time-filter time,
+.time-filter em {
+  display: block;
+  margin-left: auto;
+}
+
+/* meta files */
+
+#files {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+
+  > div {
+    grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: subgrid;
+  }
+
+  dt {
+    grid-column: 1;
+    display: block;
+  }
+
+  dd {
+    grid-column: 2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: start;
+    align-content: start;
+    gap: 0.15em;
+    padding-top: 0.6em;
+    margin-left: 0;
+  }
+}
+
+.loc {
+  display: flex;
+  width: 0.5em;
+  aspect-ratio: 1;
+  background: steelblue;
+  border-radius: 50%;
 }
