--- a/style.css
+++ b/style.css
@@ -346,6 +346,11 @@ circle.selected {
     display: block;
   }
 
+  dt small {
+    display: block;
+    opacity: 0.6;
+  }
+
   dd {
     grid-column: 2;
     display: flex;
@@ -362,6 +367,6 @@ circle.selected {
   display: flex;
   width: 0.5em;
   aspect-ratio: 1;
-  background: steelblue;
+  background-color: var(--color);
   border-radius: 50%;
 }
