finished step 4 scrollytelling

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font: 100%/1.5 system-ui;
-    max-width: 100ch;
+    /* max-width: 100ch; */
+    max-width: none;
     margin-inline: max(1em, (100% - 100ch) / 2);
     padding: 1em;
 }
@@ -369,4 +370,28 @@ circle.selected {
   aspect-ratio: 1;
   background-color: var(--color);
   border-radius: 50%;
+}
+
+/* scrollytelling */
+
+#scrolly-1 {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+
+  > * {
+    flex: 1;
+  }
+}
+
+#scatter-story {
+  position: relative;
+}
+
+#scatter-plot {
+  position: sticky;
+  top: 0;
+  left: 0;
+  bottom: auto;
+  height: 50vh;
 }
